syntax = "proto3";

package p_status;

message PStatus {
    bool success = 1;
    string message = 2;
}
